--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -146,7 +146,7 @@
             });
             
             function mensajesError() { 
-                var error = /*[[${error}]]*/ undefined;
+                var error = [[${error}]];
                 if (error !== undefined && error !== "") {
                     if (error === "sesion") {
                         document.getElementById("errorSesion").style.display = "flex";
